[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Events_panel.gd" type="Script" id=1]
[ext_resource path="res://assets/font_60.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/Available_events_panel.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Interested_events_panel.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Invited_events_panel.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Confirmed_events_panel.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Chat_panel.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.270588, 0.501961, 0.188235, 1 )

[node name="Events_panel" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 721.0
margin_bottom = 1281.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1.0
custom_styles/panel = SubResource( 1 )

[node name="Event_list" type="ItemList" parent="Control"]
margin_left = -866.256
margin_top = 180.272
margin_right = -484.256
margin_bottom = 516.272
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel_button" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -245.0
margin_top = -141.0
custom_fonts/font = ExtResource( 2 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -89.5
margin_top = 47.5683
margin_right = 89.5
margin_bottom = 118.568
custom_fonts/font = ExtResource( 2 )
text = "Events"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interested_list" type="ItemList" parent="Control"]
margin_left = -853.256
margin_top = 547.272
margin_right = -480.256
margin_bottom = 830.272

[node name="Confirmed_list" type="ItemList" parent="Control"]
margin_left = -851.5
margin_top = 856.406
margin_right = -471.5
margin_bottom = 1196.41

[node name="Interested_button" type="Button" parent="Control"]
margin_left = -466.169
margin_top = 311.572
margin_right = -184.169
margin_bottom = 388.572
custom_fonts/font = ExtResource( 2 )
text = "Interested"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avaialble_events_button" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.5
margin_top = -392.985
margin_right = 225.5
margin_bottom = -315.985
custom_fonts/font = ExtResource( 2 )
text = "Available Events"

[node name="Interested_events_button" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -238.0
margin_top = -242.985
margin_right = 238.0
margin_bottom = -165.985
custom_fonts/font = ExtResource( 2 )
text = "Interested Events"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Invited_events_button" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.5
margin_top = -92.9851
margin_right = 192.5
margin_bottom = -15.9846
custom_fonts/font = ExtResource( 2 )
text = "Invited Events"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirmed_events_button" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -243.5
margin_top = 57.0154
margin_right = 243.5
margin_bottom = 134.015
custom_fonts/font = ExtResource( 2 )
text = "Confirmed Events"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chat_button" type="Button" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -141.0
margin_right = 301.0
custom_fonts/font = ExtResource( 2 )
text = "Chat"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Available_events_panel" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Interested_events_panel" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Invited_events_panel" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Confirmed_events_panel" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Chat_panel" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="visibility_changed" from="." to="." method="_on_Events_panel_visibility_changed"]
[connection signal="pressed" from="Control/Cancel_button" to="." method="_on_Cancel_button_pressed"]
[connection signal="pressed" from="Control/Avaialble_events_button" to="." method="_on_Avaialble_events_button_pressed"]
[connection signal="pressed" from="Control/Interested_events_button" to="." method="_on_Interested_events_button_pressed"]
[connection signal="pressed" from="Control/Invited_events_button" to="." method="_on_Invited_events_button_pressed"]
[connection signal="pressed" from="Control/Confirmed_events_button" to="." method="_on_Confirmed_events_button_pressed"]
[connection signal="pressed" from="Control/Chat_button" to="." method="_on_Chat_button_pressed"]
